--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,14 +1,19 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  background-color: rgb(211, 204, 64);
 }
 
 .spotlight__maintitle {
   color: green;
   font-size: 20pt;
-  margin: 50px;
+  margin-top: 10px;
+  margin-bottom: 30px;
+}
+
+.header__image {
+  width: 430px;
 }
 
 .spotlight__form {
@@ -41,6 +46,7 @@
   place-items: center;
   list-style: none;
   text-align: center;
+  margin-left: 25px;
 }
 .movie__item {
   text-align: center;
