--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,5 +1,5 @@
 #root {
-  max-width: 1280px;
+  max-width: 1440px;
   margin: 0 auto;
   text-align: center;
   background-color: rgb(211, 204, 64);
@@ -38,6 +38,21 @@
 .spotlight__select {
   color: green;
 }
+.movie__detail {
+  background-color: green;
+  color: white;
+  width: 400px;
+  position: relative;
+  left: 500px;
+  border-radius: 10%;
+  top: 10px;
+
+}
+.movie__name {
+  font-size: 25pt;
+  color: white;
+
+}
 
 .movie__list {
   display: grid;
@@ -46,7 +61,7 @@
   place-items: center;
   list-style: none;
   text-align: center;
-  margin-left: 25px;
+  margin-left: 80px;
 }
 .movie__item {
   text-align: center;
@@ -63,5 +78,71 @@
 .movie__name {
   font-size: 15pt; 
   font-weight: bold;
-  color: rgb(160, 154, 154);
+  color: white;
+}
+
+//media queries
+
+@media (max-width: 768px) {
+  .spotlight__maintitle {
+    color: green;
+    font-size: 35pt;
+    margin-top: 10px;
+    margin-bottom: 30px;
+  }
+  
+  spotlight__header {
+    height: 600px;
+  }
+
+  .header__image {
+    width: 800px;
+  }
+
+  .movie__list {
+    display: grid;
+    grid-template-columns: 100px 100px 100px; 
+    gap: 150px; // Espacio entre elementos
+    place-items: center;
+    list-style: none;
+    text-align: center;
+    margin-left: 60px;
+  }
+
+  .spotlight__form {
+    display: flex;
+    justify-content: center;
+    margin: 30px
+  }
+}
+
+@media (max-width: 1440px) {
+  .spotlight__maintitle {
+    color: green;
+    font-size: 40pt;
+    margin-top: 10px;
+    margin-bottom: 30px;
+  }
+  
+ 
+  .header__image {
+    width: 1500px;
+  }
+
+  .movie__list {
+    display: grid;
+    grid-template-columns: 100px 100px 100px 100px 100px; 
+    gap: 150px; // Espacio entre elementos
+    place-items: center;
+    list-style: none;
+    text-align: center;
+    margin-left: 100px;
+  }
+
+  .spotlight__form {
+    display: flex;
+    justify-content: center;
+    margin: 30px
+  }
+
 }
