second fix before publish

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -116,7 +116,7 @@
   }
 }
 
-@media (max-width: 1440px) {
+@media (min-width: 1440px) {
   .spotlight__maintitle {
     color: green;
     font-size: 40pt;
